--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -227,3 +227,30 @@
     transform: rotate(0deg);
   }
 }
+.mainnav ul{
+  display: flex;
+  justify-content: center;
+    margin-top: 50px;
+}
+ 
+.mainnav ul li{
+  margin: 0 24px;
+    list-style: none;
+    font-weight: bold;
+}  
+.main {
+  min-height: 100vh;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 3rem;
+}
+.con{
+  background-color: red;
+}
+.con1{
+  background-color: yellow;
+}
